--- a/css/jquery.dropdown.css
+++ b/css/jquery.dropdown.css
@@ -109,7 +109,7 @@
 
 #dropdown ul li a:active {
     color: #fff;
-    background: #3C93CE;
+    background: #4183c4;
 }
 
 #dropdown ul li.divider {
