--- a/css/jquery.dropdown.css
+++ b/css/jquery.dropdown.css
@@ -11,15 +11,16 @@
     padding: 5px 0;
     margin: 10px;
     background: #FFF;
-    border: 1px solid #ddd;
+    border: 1px solid #ccc;
+    border: 1px solid rgba(0, 0, 0, 0.15);
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     -ms-border-radius: 4px;
     -o-border-radius: 4px;
     border-radius: 4px;
-    -webkit-box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
-    -moz-box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
-    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0 3px 10px rgba(0, 0, 0, 0.175);
+    -moz-box-shadow: 0 3px 10px rgba(0, 0, 0, 0.175);
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.175);
     z-index: 1000;
 }
 
@@ -87,14 +88,14 @@
 
 #dropdown ul li a {
     display: block;
-    padding: 5px 20px;
+    padding: 3px 20px;
     clear: both;
     cursor: pointer;
+    color: #333;
     font-family: sans-serif;
     font-weight: normal;
-    font-size: 15px;
-    line-height: 20px;
-    color: inherit;
+    font-size: 14px;
+    line-height: 1.42857143;
     white-space: nowrap;
     text-align: left;
     text-decoration: none;
@@ -102,7 +103,7 @@
 
 #dropdown ul li a:hover,
 #dropdown ul li a:focus {
-    color: #494949;
+    color: #262626;
     background: #f5f5f5;
     text-decoration: none;
 }
@@ -114,7 +115,7 @@
 
 #dropdown ul li.divider {
     height: 1px;
-    margin: 6px 1px;
+    margin: 9px 0;
     display: block;
     overflow: hidden;
     background-color: #e5e5e5;
